--- a/my_sql.ipynb
+++ b/my_sql.ipynb
@@ -40,7 +40,7 @@
     "connection = mysql.connector.connect(\n",
     "    host = 'localhost',\n",
     "    user = 'root',\n",
-    "    password = 'Rudra@014'\n",
+    "    password = '@@@@@@'\n",
     ")\n",
     "cursor = connection.cursor()"
    ]
