--- a/my_sql.ipynb
+++ b/my_sql.ipynb
@@ -100,7 +100,7 @@
     "connection = mysql.connector.connect(\n",
     "    host = 'localhost',\n",
     "    user = 'root',\n",
-    "    password = 'Rudra@014',\n",
+    "    password = '@@@@@@',\n",
     "    database = \"cumulative_test\"\n",
     ")\n",
     "cursor = connection.cursor()"
